<resources>
    <string name="app_name">TelegramClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Katerina Morozova</string>
    <string name="settings_default_status">в сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_phone">+7(XXX)XXX-XX_XX</string>
    <string name="settings_hint_phone">Нажмите, чтобы изменить номер телефона</string>
    <string name="settings_default_change_username">\@my_username</string>
    <string name="settings_hint_change_username">Имя пользователя</string>
    <string name="settings_default_info">Всем приветик в этом чатике</string>
    <string name="settings_default_hint_info">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы отправили SMS с кодом проверки на Ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="check_your_phone">Проверка номера телефона</string>
    <string name="register_phone_hint">Введите номер телефона</string>
    <string name="settings_hint_name">Имя</string>
    <string name="settings_hint_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым!</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_input_username">username</string>
    <string name="settings_input_bio">О себе</string>
</resources>