<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_user_photo"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:src="@drawable/default_photo"
            app:civ_circle_background_color="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/horizontal_margin"/>

        <TextView
            android:id="@+id/settings_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/settings_default_username"
            android:textSize="@dimen/normalText"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginStart="@dimen/horizontal_margin"
            app:layout_constraintStart_toEndOf="@id/settings_user_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settings_user_photo">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccentDark"
            android:text="@string/settings_default_status"
            android:textSize="@dimen/smallText"
            android:layout_marginStart="@dimen/horizontal_margin"
            app:layout_constraintStart_toEndOf="@id/settings_user_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_full_name">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_text_account"
        android:textSize="@dimen/smallText"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="@dimen/horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/settings_header"
        android:layout_marginTop="@dimen/vertical_large_margin">
    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_phone"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settings_button">

        <TextView
            android:id="@+id/settings_phone_number"
            android:text="@string/settings_default_phone"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_phone"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normal_text" />

        <TextView
            android:id="@+id/settings_hint_number"
            android:text="@string/settings_hint_phone"
            app:layout_constraintTop_toBottomOf="@+id/settings_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/small_text" />
        
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_hint_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_username"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn_change_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settings_button">

        <TextView
            android:id="@+id/settings_change_username"
            android:text="@string/settings_default_change_username"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_username"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normal_text" />

        <TextView
            android:id="@+id/settings_hint_change_number"
            android:text="@string/settings_hint_change_username"
            app:layout_constraintTop_toBottomOf="@+id/settings_change_username"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/small_text" />

        <View
            app:layout_constraintTop_toBottomOf="@id/settings_hint_change_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_info"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn_change_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settings_button">

        <TextView
            android:id="@+id/settings_change_info"
            android:text="@string/settings_default_info"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_info"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normal_text" />

        <TextView
            android:id="@+id/settings_hint_change_info"
            android:text="@string/settings_default_hint_info"
            app:layout_constraintTop_toBottomOf="@+id/settings_change_info"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/small_text" />

        <View
            app:layout_constraintTop_toBottomOf="@id/settings_hint_change_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_change_photo"
        android:layout_width="@dimen/settings_user_photo_width"
        android:layout_height="@dimen/settings_user_photo_height"
        android:src="@drawable/ic_camera"
        android:layout_marginEnd="@dimen/horizontal_margin"
        app:civ_border_color="@color/colorGrey"
        app:civ_border_width="@dimen/settings_change_photo_border"
        app:civ_circle_background_color="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/settings_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header" />

</androidx.constraintlayout.widget.ConstraintLayout>